--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "gsap": "^3.14.2",
+    "gsap-trial": "^3.12.7",
     "lucide-react": "^0.555.0",
     "mongodb": "^7.0.0",
     "motion": "^12.23.24",
-    "next": "16.0.5",
+    "next": "^16.1.1",
     "next-auth": "5.0.0-beta.30",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -42,7 +43,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^16.1.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "prisma": "6.19",
